# itmo-cv-24

individual_task/: solution.ipynb
lab1/: README.md  lab1.ipynb
lab2/: README.md  pyproject.toml
lab2/lab2/: image_searcher.py  sift_image_searcher.py  template_image_searcher.py
lab3/: README.md  lab3.ipynb
lab3/src/: data.py  engine.py  metrics.py  models.py
