[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["aiwannafly <me@aiwannafly.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
